AU: 1 updated - anki

--- a/anki/anki.nuspec
+++ b/anki/anki.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>anki</id>
-    <version>2.1.51</version>
+    <version>2.1.52</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/anki</packageSourceUrl>
     <owners>rlpowell,Lite</owners>
     <title>The Anki Flashcard Program</title>
@@ -20,8 +20,7 @@
     <bugTrackerUrl>https://github.com/ankitects/anki/issues</bugTrackerUrl>
     <tags>learning education flashcards efficient memory language-learning language remember spaced-repetition srs cross-platform</tags>
     <summary>Powerful, intelligent flash cards. Remembering things just became much easier.</summary>
-    <description>
-# Anki
+    <description><![CDATA[# Anki
 Anki is a program which makes remembering things easy. Because it's a lot more efficient than traditional study methods, you can either greatly decrease your time spent studying, or greatly increase the amount you learn. 
 
 Anyone who needs to remember things in their daily life can benefit from Anki. Since it is content-agnostic and supports images, audio, videos and scientific markup (via LaTeX), the possibilities are endless.
@@ -58,8 +57,8 @@ For example:
   ```
   choco install anki --params "/Qt5"
   ```
-    </description>
-    <releaseNotes>https://github.com/ankitects/anki/releases/tag/2.1.51</releaseNotes>
+]]></description>
+    <releaseNotes>https://github.com/ankitects/anki/releases/tag/2.1.52</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
