--- a/mnemosyne/mnemosyne.nuspec
+++ b/mnemosyne/mnemosyne.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>mnemosyne</id>
-    <version>2.8</version>
+    <version>2.9</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/mnemosyne</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>The Mnemosyne Project</title>
@@ -18,8 +18,7 @@
     <bugTrackerUrl>https://github.com/mnemosyne-proj/mnemosyne/issues</bugTrackerUrl>
     <tags>flashcards efficient learning memory remember language SRS Anki</tags>
     <summary>App for efficient learning with powerful digital flashcards.</summary>
-    <description>
-# The Mnemosyne Project
+    <description><![CDATA[# The Mnemosyne Project
 The Mnemosyne Project consists of two parts:
 * A free flash-card tool which optimizes your learning process.
 * A research project into the nature of long-term memory.
@@ -42,7 +41,7 @@ Mnemosyne aims to be a user-friendly flash card program, with a clean, deceptive
     ```
     choco install mnemosyne --params "/InstallDir:D:\mnemosyne"
     ```
-    </description>
+]]></description>
 <releaseNotes>https://mnemosyne-proj.org/whats-new</releaseNotes>
 </metadata>
   <files>
