--- a/memento/memento.nuspec
+++ b/memento/memento.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>memento</id>
-    <version>0.5.6</version>
+    <version>1.0.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/memento</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Memento</title>
@@ -56,9 +56,9 @@ Supports streaming from many websites through [youtube-dl](https://community.cho
   choco install memento --params "/InstallDir:D:\memento"
   ```
 ]]></description>
-    <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v0.5.6-beta</releaseNotes>
+    <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v1.0.0</releaseNotes>
     <dependencies>
-      <dependency id="memento.install" version="[0.5.6]" />
+      <dependency id="memento.install" version="[1.0.0]" />
     </dependencies>
   </metadata>
   <files>
