--- a/brename/brename.nuspec
+++ b/brename/brename.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>brename</id>
-    <version>2.11.1</version>
+    <version>2.12.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/brename</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>brename</title>
@@ -16,8 +16,7 @@
     <bugTrackerUrl>https://github.com/shenwei356/brename/issues</bugTrackerUrl>
     <tags>cross-platform batch rename file directory regex commandline</tags>
     <summary>A cross-platform command-line tool for safely batch renaming files/directories via regular expression.</summary>
-    <description>
-# brename
+    <description><![CDATA[# brename
 `brename` is a cross-platform command-line tool for safely batch renaming files/directories via regular expression.
 
 ## Features
@@ -34,8 +33,8 @@
 - **Colorful output**.
 
 ### For more information about brename see [the official README.md](https://github.com/shenwei356/brename/blob/master/README.md).
-    </description>
-<releaseNotes>https://github.com/shenwei356/brename/releases/tag/v2.11.1</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/shenwei356/brename/releases/tag/v2.12.0</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
