--- a/netlimiter/netlimiter.nuspec
+++ b/netlimiter/netlimiter.nuspec
@@ -10,15 +10,14 @@
     <projectUrl>https://www.netlimiter.com/</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/netlimiter.png</iconUrl>
     <copyright>Copyright (c) 2005-2021 Locktime Software s.r.o.</copyright>
-    <licenseUrl>https://www.netlimiter.com/pages/netlimiter-eula</licenseUrl>
+    <licenseUrl>https://www.netlimiter.com/docs/installation/end-user-license-agreement-eula</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <docsUrl>https://www.netlimiter.com/docs</docsUrl>
     <bugTrackerUrl>https://www.netlimiter.com/support</bugTrackerUrl>
     <tags>netlimiter network limiter admin internet monitor bandwith filter block trial</tags>
     <summary>NetLimiter is an ultimate internet traffic control and monitoring tool.</summary>
-    <description><![CDATA[**NOTE:** This is commercial software with 28-day trial period, after expiration, a valid license key is required. You can purchase one from [the official website](https://www.netlimiter.com/buy/nl4pro).
-
-**NOTE:** The following text is for the most part an excerpt from [the official website](https://www.netlimiter.com/products/nl4).
+    <description>
+**NOTE:** This is commercial software with 28-day trial period, after expiration, a valid license key is required. You can purchase one from [the official website](https://www.netlimiter.com/buy).
 
 # NetLimiter
 NetLimiter is an ultimate internet **traffic control** and **monitoring tool** designed for Windows. You can use NetLimiter to set download/upload transfer rate limits for applications or even single connection and monitor their internet traffic.
@@ -44,7 +43,7 @@ Along with this unique feature, Netlimiter offers comprehensive set of **interne
   ```
   choco uninstall netlimiter --params "/CleanSettings"
   ```
-]]></description>
+    </description>
     <releaseNotes>https://www.netlimiter.com/releases/5-1-5-0</releaseNotes>
     <dependencies>
       <dependency id="dotnetfx" version="4.6.2.0" />
