AU: 1 updated - dnsproxy [skip ci]

--- a/dnsproxy/dnsproxy.nuspec
+++ b/dnsproxy/dnsproxy.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>dnsproxy</id>
-    <version>0.46.2</version>
+    <version>0.46.3</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/dnsproxy</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>DNS Proxy</title>
@@ -16,13 +16,12 @@
     <bugTrackerUrl>https://github.com/AdguardTeam/dnsproxy/issues</bugTrackerUrl>
     <tags>dns proxy dns-over-quic dns-over-https dns-over-tls dnscrypt commandline cross-platform</tags>
     <summary>A simple DNS proxy server that supports all existing DNS protocols including DNS-over-TLS, DNS-over-HTTPS, DNSCrypt, and DNS-over-QUIC</summary>
-    <description>
-# DNS Proxy
+    <description><![CDATA[# DNS Proxy
 A simple DNS proxy server that supports all existing DNS protocols including `DNS-over-TLS`, `DNS-over-HTTPS`, `DNSCrypt`, and `DNS-over-QUIC`. Moreover, it can work as a `DNS-over-HTTPS`, `DNS-over-TLS` or `DNS-over-QUIC` server.
 
 ### For more information about dnsproxy see [README.md](https://github.com/AdguardTeam/dnsproxy/blob/master/README.md).
-    </description>
-<releaseNotes>https://github.com/AdguardTeam/dnsproxy/releases/tag/v0.46.2</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/AdguardTeam/dnsproxy/releases/tag/v0.46.3</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
