AU: 1 updated - hexyl [skip ci]

--- a/hexyl/hexyl.nuspec
+++ b/hexyl/hexyl.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>hexyl</id>
-    <version>0.10.0</version>
+    <version>0.11.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/hexyl</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>hexyl</title>
@@ -17,8 +17,7 @@
     <bugTrackerUrl>https://github.com/sharkdp/hexyl/issues</bugTrackerUrl>
     <tags>hex hexdump hexview terminal cli ascii decode input binary file utility commandline cross-platform</tags>
     <summary>hexyl is a simple hex viewer for the terminal. It uses a colored output to distinguish different categories of bytes.</summary>
-    <description>
-![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/hexyl.png)
+    <description><![CDATA[![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/hexyl.png)
 
 `hexyl` is a simple hex viewer for the terminal. It uses a colored output to distinguish different categories of bytes (NULL bytes, printable ASCII characters, ASCII whitespace characters, other ASCII characters and non-ASCII).
 
@@ -31,8 +30,8 @@
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/hexyl/preview3.png)
 
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/hexyl/preview4.png)
-    </description>
-<releaseNotes>https://github.com/sharkdp/hexyl/releases/tag/v0.10.0</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/sharkdp/hexyl/releases/tag/v0.11.0</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
