--- a/ddh/ddh.nuspec
+++ b/ddh/ddh.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ddh</id>
-    <version>2.0.1</version>
+    <version>2.0.2</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/ddh</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>ddh</title>
@@ -21,40 +21,41 @@ ddh is a generic hasher available cross-platform (Windows, macOS, Linux, BSDs) a
 
 ## Usage
 ```
-$ ddh -h
-Usage: ddh command [options...] [files...] [-]
-
-Commands
-list      List all supported hashes and checksums.
-help      This help page and exit.
-ver       Only show version number and exit.
-version   Show version page and exit.
+Usage: ddh [options...|--autocheck] [files...|--stdin]
 
 Options
---                Stop processing options.
--                 Input mode: Standard input (stdin).
--F, --file        Input mode: Regular file (default).
+    --            Stop processing options.
+-f, --file        Input mode: Regular file (default).
 -b, --binary      File: Set binary mode (default).
 -t, --text        File: Set text mode.
--M, --mmfile      Input mode: Memory-map file.
+-m, --mmfile      Input mode: Memory-map file.
 -a, --arg         Input mode: Command-line argument is text data (UTF-8).
+    --stdin       Input mode: Standard input (stdin)
 -c, --check       Check hashes list in this file.
--C, --chunk       Set buffer size, affects file/mmfile/stdin (default=64K).
+    --autocheck   Automatically determine hash type and process list.
+-C, --compare     Compares all file entries.
+-A, --against     Compare files against hash.
+    --hashes      List supported hashes.
+-B, --buffersize  Set buffer size, affects file/mmfile/stdin (default=4K).
     --shallow     Depth: Same directory (default).
--s, --depth       Depth: Deepest directories first.
-    --breadth     Depth: Sub directories first.
+-r, --depth       Depth: Deepest directories first.
+    --breath      Depth: Sub directories first.
     --follow      Links: Follow symbolic links (default).
     --nofollow    Links: Do not follow symbolic links.
     --tag         Create or read BSD-style hashes.
     --sri         Create or read SRI-style hashes.
+    --plain       Create or read plain hashes.
+    --key         Binary key file for BLAKE2 hashes.
+    --seed        Seed literal argument for Murmurhash3 hashes.
     --version     Show version page and quit.
     --ver         Show version and quit.
     --license     Show license page and quit.
 -h, --help        This help information.
+
 This program has actual coffee-making abilities.
 ```
 ]]></description>
-<releaseNotes>https://github.com/dd86k/ddh/releases/tag/v2.0.1</releaseNotes>
+<releaseNotes>https://github.com/dd86k/ddh/releases/tag/v2.0.2</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
