--- a/adreports/adreports.nuspec
+++ b/adreports/adreports.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>adreports</id>
-    <version>1.4.7</version>
+    <version>1.4.8</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/adreports</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>ADReports</title>
@@ -15,8 +15,7 @@
     <bugTrackerUrl>https://github.com/brechtsanders/ADReports/issues</bugTrackerUrl>
     <tags>active-directory AD report manage state info information export data commandline</tags>
     <summary>Command-line tools to generate reports from Active Directory (AD).</summary>
-    <description><![CDATA[ 
-# ADReports
+    <description><![CDATA[# ADReports
 Generate reports from Active Directory (AD).
 
 ## Description
@@ -66,9 +65,8 @@ ADReports provides tools to generate reports from Active Directory (AD) via LDAP
   ```
   ADReportUsers -f TSV -o AccountNeverExpires.txt -e -q "(&(objectCategory=person)(objectClass=user)(userAccountControl:1.2.840.113556.1.4.803:=65536))"
   ```
-  ]]>
-    </description>
-    <releaseNotes>https://github.com/brechtsanders/ADReports/releases/tag/1.4.7</releaseNotes>
+]]></description>
+    <releaseNotes>https://github.com/brechtsanders/ADReports/releases/tag/1.4.8</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
